--- a/src/components/Root/Root.css
+++ b/src/components/Root/Root.css
@@ -8,3 +8,67 @@
     color: white;
     cursor: pointer;
 }
+:root {
+    --tooltip-text-color: rgb(23, 83, 126);
+    --tooltip-background-color: white;
+    --tooltip-margin: 100px;
+    --tooltip-arrow-size: 10px;
+}
+
+/* Wrapping */
+.Tooltip-Wrapper {
+    display: inline
+}
+
+.Tooltip-Tip {
+    position: absolute;
+    border-radius: 4px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 20px;
+    color: var(--tooltip-text-color);
+    background: var(--tooltip-background-color);
+    font-size: 14px;
+    font-family: sans-serif;
+    line-height: 1;
+    z-index: 1000;
+    white-space: nowrap;
+}
+
+.toolTipChild {
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+}
+
+.Tooltip-Container {
+    display: flex;
+    flex-direction: row !important;
+    justify-content: center;
+    align-items: center;
+}
+
+/* CSS border triangles */
+.Tooltip-Tip::before {
+    content: " ";
+    left: 50%;
+    border: solid transparent;
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+    border-width: var(--tooltip-arrow-size);
+    margin-left: calc(var(--tooltip-arrow-size) * -1);
+}
+
+/* Absolute positioning */
+.Tooltip-Tip.top {
+    top: calc(var(--tooltip-margin) * -10);
+}
+
+/* CSS border triangles */
+.Tooltip-Tip.top::before {
+    top: 50%;
+    border-top-color: var(--tooltip-background-color);
+}
