updated the ui and added docker filw

--- a/src/components/HorizontalNode.js/HorizontalNode.css
+++ b/src/components/HorizontalNode.js/HorizontalNode.css
@@ -8,6 +8,7 @@
     cursor: pointer;
     font-size: 0.7vw;   
     width: fit-content;
+    border-radius: 5px;
 }
 .member-name{
      margin: 10px;
