--- a/src/components/HorizontalNode.js/HorizontalNode.css
+++ b/src/components/HorizontalNode.js/HorizontalNode.css
@@ -1,19 +1,20 @@
-.HorizontalNode{
-    background-color: #A3A0A0 ;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-left: 30px;
-    margin-right: 30px;
-    padding: 10px;
-    cursor: pointer;
-    font-size: 0.7vw;   
-    width: fit-content;
-    border-radius: 5px;
+.HorizontalNode {
+  background-color: #a3a0a0;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  /* margin-left: 30px; */
+
+  margin-left: 5px;
+  padding: 10px;
+  cursor: pointer;
+  font-size: 0.7vw;
+  width: fit-content;
+  border-radius: 5px;
 }
-.member-name{
-     margin: 10px;
+.member-name {
+  margin: 10px;
 }
-.highlighted-text{
-    color: white;
-    font-weight: bold;
+.highlighted-text {
+  color: white;
+  font-weight: bold;
 }
