--- a/src/components/Navbar/bootstrap.css
+++ b/src/components/Navbar/bootstrap.css
@@ -307,7 +307,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: "roboto";
+  font-family: sans-serif;
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.5;
