--- a/src/components/Navbar/bootstrap.css
+++ b/src/components/Navbar/bootstrap.css
@@ -4454,7 +4454,7 @@ a.close.disabled {
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: "roboto";
+  font-family: sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -4543,7 +4543,7 @@ a.close.disabled {
   z-index: 1060;
   display: block;
   max-width: 276px;
-  font-family: "roboto";
+  font-family: sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -7283,7 +7283,7 @@ a.text-dark:hover, a.text-dark:focus {
   color: rgba(255, 255, 255, 0.5) !important; }
 
 .text-hide {
-  font: 0/0 a;
+  font: initial;
   color: transparent;
   text-shadow: none;
   background-color: transparent;
