--- a/src/components/Leaf/Leaf.css
+++ b/src/components/Leaf/Leaf.css
@@ -1,14 +1,30 @@
 .leaf {
-    background-color: #3a7879;
-    padding: 10px 0px;
-    font-size: 0.5vw;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-    border-radius: 5px;
-    display: inline-block;
-    max-width: 200px;
-    text-align: center;
-    color: white;
-    height: 300px;
-    overflow: scroll;
-    overflow-x: hidden;
+  /* background-color: #3a7879; */
+  background-color: #fff;
+  padding: 10px 0px 10px 5px;
+  font-size: 0.5vw;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  border-radius: --node-border-radius;
+  display: inline-block;
+  max-width: 200px;
+  text-align: center;
+  /* color: white; */
+  height: 300px;
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
+.leaf-merge {
+  /* background-color: #3a7879; */
+  background-color: #fff;
+  padding: 10px 0px 10px 5px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  border-radius: --node-border-radius;
+  display: inline-block;
+  max-width: 200px;
+  text-align: center;
+  /* color: white; */
+  height: 300px;
+  overflow: scroll;
+  overflow-x: hidden;
 }
