--- a/src/index.css
+++ b/src/index.css
@@ -1,65 +1,42 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+}
+
+:root {
+  --primary-color: #1388c9;
+  --secondary-color: #1388c9;
+  --secondary-color-faded: rgba(19, 136, 201, 0.9);
+  --tertiary-color: rgb(0, 177, 205);
+  --grey-light: rgb(191, 191, 191);
+  --grey-dark: rgb(92, 105, 116);
+  --grey-dark-faded: rgba(92, 105, 116, 0.7);
+  --node-border-radius: 2px;
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
-    font-family: 'Raleway', sans-serif;
-}
-
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+  font-family: 'Raleway', sans-serif;
+  background-color: #f5f5f5;
 }
 
 .back-btn {
-    background-color: #0095ff;
-    border: 1px solid transparent;
-    border-radius: 3px;
-    box-shadow: rgba(255, 255, 255, 0.4) 0 1px 0 0 inset;
-    box-sizing: border-box;
-    color: #fff;
-    cursor: pointer;
-    display: inline-block;
-    font-family: -apple-system, system-ui, 'Segoe UI', 'Liberation Sans', sans-serif;
-    font-size: 13px;
-    font-weight: 400;
-    line-height: 1.15385;
-    margin: 5px;
-    outline: none;
-    padding: 8px 0.8em;
-    position: absolute;
-    text-align: center;
-    text-decoration: none;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    vertical-align: baseline;
-    white-space: nowrap;
-    text-transform: uppercase;
-
-    z-index: 1;
-    pointer-events: all;
-}
-
-.back-btn:hover,
-.back-btn:focus {
-    background-color: #07c;
-}
-
-.back-btn:focus {
-    box-shadow: 0 0 0 4px rgba(0, 149, 255, 0.15);
-}
-
-.back-btn:active {
-    background-color: #0064bd;
-    box-shadow: none;
+  margin: 5px;
+  margin-left: 20px;
+  position: absolute;
+  z-index: 1;
+  pointer-events: all;
 }
 
 .welcome-box {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 80vh;
-    color: #006791;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 80vh;
+  color: #006791;
+}
+
+.leaf-member-name {
+  white-space: normal !important;
+  height: auto !important;
+  padding: 3px 0 !important;
 }
