--- a/src/components/Node/Node.css
+++ b/src/components/Node/Node.css
@@ -14,7 +14,7 @@
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   cursor: pointer;
   color: white;
-  padding-right: 5px;
+  padding-right: 10px;
 }
 .node2 {
   padding: 0px 0;
@@ -29,7 +29,7 @@
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   cursor: pointer;
   color: white;
-  padding-right: 5px;
+  padding-right: 10px;
 }
 
 .text {
@@ -43,11 +43,11 @@
 }
 
 .text-teamname {
-  font-weight: bold;
+  margin-top: 2px;
 }
 
 ::-webkit-scrollbar {
-  width: 5px;
+  width: 1px;
 }
 ::-webkit-scrollbar-track {
   /* background: #3a7879; */
